# learn-arabic-from-news

./: .gitignore  CLAUDE.md  PHASE2.md  README.md  pyproject.toml  samconfig.toml  template.yaml
lambdas/api/: handler.py
lambdas/authorizer/: handler.py
lambdas/orchestrator/: handler.py  requirements.txt
lambdas/process/: Dockerfile  handler.py  requirements.txt
tests/: test_api.py  test_orchestrator.py  test_process.py
tests/e2e/: test_pipeline.py
web/: .env.example  deploy.sh  index.html  package-lock.json  package.json
web/src/: App.tsx  main.tsx
web/src/components/: VocabSheet.tsx
web/src/data/: cdn.ts
web/src/hooks/: useTTS.ts
web/src/routes/: Article.tsx  Home.tsx
web/src/styles/: globals.css  tokens.css
