[project]
name = "learn-arabic-from-news"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3",
    "aws-lambda-powertools[all]",
]

[dependency-groups]
dev = [
    "pytest",
    "moto[all]",
    "ruff",
    "taskipy",
    "requests",
]

[tool.taskipy.tasks]
lint = "ruff check . && ruff format --check ."
format = "ruff format . && ruff check --fix ."
test = "pytest tests/"
validate = "sam validate"
build = "sam build"
deploy = "sam deploy --no-confirm-changeset --no-fail-on-empty-changeset"
check = "task lint && task test && task validate && task build"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["lambdas", "lambdas/api"]
